--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "compression": "^1.8.0",
     "connect-pg-simple": "^10.0.0",
     "connect-sqlite3": "^0.9.15",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
@@ -63,6 +65,7 @@
     "framer-motion": "^11.13.1",
     "helmet": "^8.0.0",
     "input-otp": "^1.2.4",
+    "jt-debugger": "^1.0.0",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "passport": "^0.7.0",
@@ -88,8 +91,10 @@
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/compression": "^1.7.5",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/connect-sqlite3": "^0.9.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "20.16.11",
