feat: add CLI tool for project initialization and update README
This commit introduces a new CLI tool (`bin/cli.js`) that allows users to initialize a new project using the template. The tool prompts for project details, copies the template files, and sets up the project. Additionally, the README has been updated to reflect the new CLI usage and provide more detailed project information.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "react-vite-express-template",
+  "name": "react-secure-auth-template",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
+  "bin": {
+    "create-secure-auth-app": "./bin/cli.js"
+  },
   "scripts": {
     "dev": "nodemon --exec tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
